Prepare Elasticsearch's data and log directories
Ensure they have Elasticsearch's system user and group as their owner
and group.

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -54,3 +54,36 @@
   package: name=elasticsearch state=present
   notify:
     - Restart Elasticsearch
+
+- block:
+  - name: Get Elasticsearch's system user
+    command: systemctl --property=User show elasticsearch.service
+    register: elasticsearch_user_res
+    changed_when: false
+
+  - name: Get Elasticsearch's system group
+    command: systemctl --property=Group show elasticsearch.service
+    register: elasticsearch_group_res
+    changed_when: false
+
+  - set_fact:
+      elasticsearch_user: "{{ elasticsearch_user_res.stdout | regex_replace('^User=', '') }}"
+      elasticsearch_group: "{{ elasticsearch_group_res.stdout | regex_replace('^Group=', '') }}"
+
+  when: elasticsearch_data_dir is defined or elasticsearch_log_dir is defined
+
+- name: Prepare Elasticsearch's data directory
+  file:
+    path: "{{ elasticsearch_data_dir }}"
+    state: directory
+    owner: "{{ elasticsearch_user }}"
+    group: "{{ elasticsearch_group }}"
+  when: elasticsearch_data_dir is defined
+
+- name: Prepare Elasticsearch's log directory
+  file:
+    path: "{{ elasticsearch_log_dir }}"
+    state: directory
+    owner: "{{ elasticsearch_user }}"
+    group: "{{ elasticsearch_group }}"
+  when: elasticsearch_log_dir is defined
