--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,9 +2,8 @@ galaxy_info:
   author: Tadej Janež
   description: >
     Role to install and configure Elasticsearch 2.4 or 5.0 on RHEL/CentOS 7.
-  company: Genialis
 
-  license: Proprietary
+  license: GPLv3
 
   min_ansible_version: 2.2
 
@@ -12,8 +11,11 @@ galaxy_info:
     - name: EL
       versions:
         - 7
-  
+
   galaxy_tags:
+    - system
+    - centos
+    - rhel
     - elasticsearch
     - database
     - nosql
