--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: Sanity check of role's configuration
   assert:
     that:
-      - elasticsearch_version in ["2.4", "5.0"]
+      - elasticsearch_version in ["5"]
 
 - include: install.yml
 
