Replace deprecated include statements
Ansible 2.4+ uses import* statements for static imports of playbooks and
tasks and include* statements for dynamic imports of playbooks and
tasks. Replace deprecated include statemtens with appropriate
import*/include* statements.

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -21,7 +21,7 @@
 - set_fact:
     elasticsearch_tuned_service_enabled: "{{ elasticsearch_tuned_service_res.rc == 0 }}"
 
-- include: configure-tuned.yml
+- include_tasks: configure-tuned.yml
   when: elasticsearch_tuned_service_enabled
 
 # NOTE: Elasticsearch recommends disabling swapping altogether for
