--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,24 +1,24 @@
 ---
 - name: Install JVM
-  package: name={{ elasticsearch_java_package }} state=present
+  package: name=java-1.8.0-openjdk-headless state=present
 
 - block:
-  - name: Add repository for Elasticsearch 5.x packages
+  - name: Add repository for Elasticsearch 6.x packages
     yum_repository:
-      name: elasticsearch-5.x
-      description: Upstream Elasticsearch repository for 5.x packages
-      baseurl: https://artifacts.elastic.co/packages/5.x/yum
+      name: elasticsearch-6.x
+      description: Upstream Elasticsearch repository for 6.x packages
+      baseurl: https://artifacts.elastic.co/packages/6.x/yum
       skip_if_unavailable: no
       gpgcheck: yes
       gpgkey: https://artifacts.elastic.co/GPG-KEY-elasticsearch
       enabled: yes
 
-  - name: Remove repository for Elasticsearch 2.x packages
+  - name: Remove repository for Elasticsearch 5.x packages
     yum_repository:
-      name: elasticsearch-2.x
+      name: elasticsearch-5.x
       state: absent
 
-  when: elasticsearch_version == "5"
+  when: elasticsearch_version == "6"
 
 - name: Check version of installed Elasticsearch
   command: rpm -q --queryformat "%{VERSION}" elasticsearch
