Set default values for elasticsearch_data_dir and elasticsearch_log_dir

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,7 @@
 ---
+elasticsearch_data_dir: /var/lib/elasticsearch
+elasticsearch_log_dir: /var/log/elasticsearch
+
 elasticsearch_version: "6"
 
 elasticsearch_sysctl_file: /etc/sysctl.d/00-elasticsearch.conf
